2004-10-07  Marcus Brinkmann  <marcus@gnu.org>

	* bucket-manage-mt.c (reply_err): Don't set propagation flag.
	(manage_mt_worker): Clear the propagation flag.

2004-08-02  Peter Bruin  <pjbruin@dds.nl>

	* cap-server-intern.h (_hurd_cap_bucket_cond_check): Call
	_hurd_cap_bucket_cond_busy instead taking its address.

2004-04-12  Marcus Brinkmann  <marcus@gnu.org>

	* bucket-manage-mt.c (manage_mt_worker): Set CTX.obj to NULL
	before calling demuxer.  If later on CTX.obj is not NULL, call
	manage_demuxer_cleanup after sending the reply message.  Set
	propagation flag in message tag.
	(manage_demuxer): Do not release OBJ lock before calling the
	demuxer, do not acquire and release OBJ lock afterwards.  Instead,
	acquire a reference to OBJ.
	(reply_err): Set propagation flag in message tag.

2004-04-11  Marco Gerards  <metgerards@student.han.nl>

	* table.c (hurd_table_init): Return an error code.

2004-04-10  Marcus Brinkmann  <marcus@gnu.org>

	* bucket-manage-mt.c (manage_mt_worker): Use
	_hurd_cap_list_item_dequeued to set current_worker_is_us.

2004-04-09  Marcus Brinkmann  <marcus@gnu.org>

	* cap-server.h (hurd_cap_bucket_inject): Change hurd_cap_t to
	hurd_cap_handle_t in R_CAP argument type.
	* bucket-manage-mt.c (manage_demuxer): Likewise.
	* bucket-inject.c (hurd_cap_bucket_inject): Likewise.  Use
	hurd_cap_handle_make instead hurd_cap_make.

	* obj-copy-out.c (_hurd_cap_obj_copy_out): Set *R_ID after adding
	element.
	* bucket-inject.c (hurd_cap_bucket_inject): Set *R_CAP and return 0.

2004-04-08  Marcus Brinkmann  <marcus@gnu.org>

	* bucket-inject.c, obj-copy-out.c: New files.
	* Makefile.am (libhurd_cap_server_a_SOURCES): Add bucket-inject.c
	and obj-copy-out.c
	* bucket-create.c (hurd_cap_bucket_create): Initialize members
	is_managed, nr_caps, waiting_rpcs of BUCKET.  Set R_BUCKET.
	* cap-server-intern.h (_hurd_cap_client_dealloc): Add new argument
	BUCKET to prototype.
	(struct hurd_cap_client): Remove declaration.